codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_full_frames.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
empty (48 columns):

  >_ OpenAI Codex (v<VERSION>) AutoContinue
     loading


› Ask Codex to do anything

  ? for shortcuts
---
resuming (48 columns):

  >_ OpenAI Codex (v<VERSION>) AutoContinue
     loading
  Resuming session…

› Ask Codex to do anything

  ? for shortcuts
---
forking (48 columns):

  >_ OpenAI Codex (v<VERSION>) AutoContinue
     loading
  Forking session…

› draft while loading


---
multiline (48 columns):

  >_ OpenAI Codex (v<VERSION>) AutoContinue
     loading


› first startup line
  second startup line


---
narrow (18 columns):

  >_ OpenAI Codex…
     loading


› first startup
  line
  second startup
  line
